@@ -4,6 +4,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import mca.item.BabyItem;
 import mca.util.NbtHelper;
@@ -48,9 +49,9 @@ public class BabyBunker {
 
     public void push(PlayerEntity player) {
         // If a player dies while holding a baby, remember it until they respawn.
-        List<ItemStack> babies = player.getInventory().main.stream()
+        List<ItemStack> babies = player.inventory.main.stream()
                 .filter(s -> s.getItem() instanceof BabyItem)
-                .toList();
+                .collect(Collectors.toList());
 
         if (!babies.isEmpty()) {
             limbo.put(player.getUuid(), babies);
