@@ -1,16 +1,32 @@
 package mca.util.localization;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 import net.minecraft.client.font.TextRenderer;
 import net.minecraft.text.OrderedText;
 import net.minecraft.text.Text;
 
-public record FlowingText(
-            List<OrderedText> lines,
-            float scale
-        ) {
+public final class FlowingText {
 
-    public static interface Factory {
+    private final List<OrderedText> lines;
+
+    private final float scale;
+
+    public FlowingText(List<OrderedText> lines, float scale) {
+        this.lines = lines;
+        this.scale = scale;
+    }
+
+    public List<OrderedText> lines() {
+        return lines;
+    }
+
+    public float scale() {
+        return scale;
+    }
+
+    public interface Factory {
         /**
          * Scales the given text to fit a desired width and height.
          */
@@ -32,7 +48,7 @@ public record FlowingText(
             // We trim excess lines in the event fitting isn't perfect
             int maxLines = (int)Math.ceil(maxBlockHeight / (10 * scale));
 
-            return new FlowingText(output.stream().limit(maxLines).toList(), scale);
+            return new FlowingText(output.stream().limit(maxLines).collect(Collectors.toList()), scale);
         }
     }
 }
